# genome-toolkit

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cliff.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/app/: main.py  vault_parser.py
backend/app/agent/: agent.py  tools.py
backend/app/db/: genome.py  users.py
backend/app/routes/: chat.py  export.py  gwas.py  gwas_analytics.py  mental_health.py  sessions.py  snps.py  tts.py  vault.py
backend/app/services/: pdf_renderer.py
backend/app/tts/: __init__.py  base.py  deepgram.py  elevenlabs.py  groq_orpheus.py  registry.py
config/: agents.yaml  default.yaml  evidence_tiers.yaml  goal_map.yaml  pathway-systems.yaml  pgx-drugs.yaml  provider_formats.yaml  risk-landscape.yaml  secrets.yaml  settings.yaml  settings.yaml.example  substances.yaml
config/gwas/: adhd-hits-clumped.json  anxiety-hits-clumped.json  anxiety-hits.json  autism-hits.json  bipolar-hits-clumped.json  depression-hits-clumped.json  ptsd-hits-clumped.json  substance-use-hits-clumped.json
config/launchd/: com.genome-toolkit.gwas-check.plist.template
data/: improvements.db
docs/: database-schema.md
docs/audits/: 2026-04-12-ux-audit.md
docs/designs/: pdf-export-design.md
docs/plans/: 2026-04-01-tui-real-data-wireup.md
docs/specs/: 2026-04-01-triage-system-design.md
docs/superpowers/plans/: 2026-04-03-genome-toolkit-web.md  2026-04-05-mental-health-foundation.md  2026-04-10-page-aware-chat-context.md  2026-04-13-mh-action-roadmap.md
docs/superpowers/specs/: 2026-04-03-genome-toolkit-web-design.md  2026-04-04-mental-health-ux-design.md  2026-04-05-vault-backed-data-design.md  2026-04-12-keyboard-navigation-design.md  2026-04-12-risk-landscape-timeline-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/__tests__/: ActionRoadmap.test.tsx  CommandPalette.test.tsx  FilterBar.test.tsx  RiskLandscape.test.tsx  WikilinkText.test.tsx  setup.ts  useMentalHealthData.test.ts  useVoice.test.ts  (+2 more)
genome_toolkit/triage/: __main__.py
research/: 20260405-pubmed-monitoring-results.md  competitive-landscape-2026.md  mental-health-ux-research.md
scripts/: check_gwas_updates.py  check_prerequisites.py  clump_gwas.py  daily_log.py  generate_gwas_gene_notes.py  genome_init.py  heartbeat.sh  ingest_pgc_gwas.py  install_gwas_cron.sh  onboard.py  post_imputation_import.py  prepare_for_imputation.py  seed_genes.py  setup.py  vault_migrate.py
scripts/analytics/: cessation_pk_model.py  claim_density.py  intervention_matrix.py  ld_analysis.py  pathway_enrichment.py  prediction_tracker.py  pubmed_monitor.py  research_update_checker.py  snp_enrich.py
scripts/data/: gene_rsid_map.json
scripts/lib/: config.py  db.py  liftover.py  multi_agent.py  secrets.py  vault_parser.py
skills/genome-analytics/: SKILL.md
skills/genome-create/: SKILL.md
skills/genome-import/: SKILL.md
skills/genome-log/: SKILL.md
skills/genome-onboard/: SKILL.md
skills/genome-report/: SKILL.md
skills/genome-validate/: SKILL.md
tests/: test_api_routes.py  test_check_prerequisites.py  test_consensus_thresholds.py  test_goal_engine.py  test_liftover.py  test_onboarding.py  test_prepare_for_imputation.py  test_rsids_migration.py  test_seed_genes.py  test_skill_smoke.py  test_vault_migrate.py  test_vault_parser.py
tests/backend/: test_export_route.py
tests/triage/: conftest.py
vault-template/: Action Items.md  Dashboard.md  Genetic Determinism - Limits and Caveats.md  Interventions Dashboard.md  MoC - All Genes.md  MoC - All Systems.md  MoC - Phenotypes.md  Question Index.md
vault-template/Guides/: Getting Started.md  Imputation Guide.md  Setup Checklist.md
vault-template/Reports/: Complete Testing Guide.md  Pharmacogenomics Card.md  Prescriber Summary.md  Wallet Card.md
vault-template/Templates/: Biomarker Entry.md  _Gene.md  _Phenotype.md  _Protocol.md  _System.md
(+123 files in other folders)
