[project]
name = "genome-toolkit"
version = "0.1.0"
description = "Personal genomics Obsidian vault toolkit — import, analyze, and act on your genome data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "PyYAML>=6.0",
    "python-frontmatter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
