[project]
name = "genome-toolkit"
version = "0.2.0"
description = "Personal genomics Obsidian vault toolkit — import, analyze, and act on your genome data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "PyYAML>=6.0",
    "python-frontmatter>=1.0.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
triage = [
    "textual>=0.80.0",
    "rich>=13.0",
    "click>=8.0",
    "jinja2>=3.1.0",
]
verify = [
    "evidence-check>=0.1.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "claude-agent-sdk>=0.1.56",
    "sse-starlette>=2.0.0",
    "groq>=0.11.0",
    "httpx>=0.27.0",
    "keyring>=24.0",
    "weasyprint>=62.0",
    "markdown>=3.5",
]
gwas = [
    "datasets>=3.0.0",
    "pyarrow>=15.0.0",
]
import = [
    "pyliftover>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
genome-triage = "genome_toolkit.triage.presentation.cli:main"

[tool.setuptools]
packages = ["genome_toolkit", "genome_toolkit.triage", "genome_toolkit.triage.domain", "genome_toolkit.triage.domain.services", "genome_toolkit.triage.domain.ports", "genome_toolkit.triage.application", "genome_toolkit.triage.infrastructure", "genome_toolkit.triage.infrastructure.vault", "genome_toolkit.triage.infrastructure.scripts", "genome_toolkit.triage.infrastructure.persistence", "genome_toolkit.triage.execution", "genome_toolkit.triage.presentation", "genome_toolkit.triage.presentation.svg", "genome_toolkit.triage.presentation.svg.templates", "genome_toolkit.triage.presentation.tui", "genome_toolkit.triage.presentation.tui.screens", "genome_toolkit.triage.presentation.tui.widgets", "genome_toolkit.triage.presentation.skill", "genome_toolkit.verify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
